use CMS gc for less latency than G1 gc